# elden-ring-death-counter

./: .editorconfig  .gitignore  Cargo.toml  LICENSE-MIT  README.md  death-counter.bat
.github/workflows/: release-cli.yaml  release.yaml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  storage.rs
crates/desktop/: package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.js
crates/desktop/src/: app.css  app.html
crates/desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/desktop/src-tauri/icons/: icon.icns
crates/desktop/src-tauri/src/: main.rs
crates/desktop/src/routes/: +layout.ts  +page.svelte  actions.svelte  characters.svelte  output.svelte  selector.svelte  store.ts
crates/lib/: .gitignore  Cargo.toml
crates/lib/src/: lib.rs  util.rs
scripts/: death-counter.bat  prompt.ps1
src/: cache.rs  lib.rs  main.rs  storage.rs  util.rs
